connect-non-signal: Don't fail to detect signals wrapped with a static-cast

BUG: 376137